# rust-raytracer

./: .gitignore  Cargo.toml  README.md  scene.rhai  test.rhai
rhai/: bvh_test.rhai  cow.rhai  mesh.rhai  scene.rhai  shapes.rhai  space.rhai  sphere.rhai  surfaces.rhai  test.rhai
scripts/: scene.rhai
src/: bvh.rs  camera.rs  display.rs  eventloop.rs  gui.rs  light.rs  main.rs  material.rs  node.rs  primitive.rs  ray.rs  raytracer.rs  scene.rs  shader.wgsl  state.rs  vec4.rs  vertex.rs  window.rs
src/shaders/: shader.wgsl
